--- a/Android Apps/app/src/main/res/values/strings.xml
+++ b/Android Apps/app/src/main/res/values/strings.xml
@@ -1,5 +1,22 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Cell Detection</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="medical_image">Medical Image</string>
+    <string name="select_image">Select Image</string>
+    <string name="app_description">Detect Cells from Image</string>
+    <string name="todo">TODO</string>
+    <string name="textview">TextView</string>
+    <string name="detect_cells">Detect Cells</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_login2">Sign in</string>
+    <string name="matlab_api_ip_address">matlab API IP address</string>
 </resources>
