--- a/Android Apps/app/src/main/res/values/strings.xml
+++ b/Android Apps/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">Cell Detection</string>
+    <string name="app_name">Classification</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="medical_image">Medical Image</string>
     <string name="select_image">Select Image</string>
-    <string name="app_description">Detect Cells from Image</string>
+    <string name="app_description">Image Classification</string>
     <string name="todo">TODO</string>
     <string name="textview">TextView</string>
-    <string name="detect_cells">Detect Cells</string>
+    <string name="detect_cells">Classify Image</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
